--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,67 @@
-.main {
+div.main {
   width: 80%;
+  margin: auto;
 }
 
-#navigation-bar {
+img {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+div.navigationBar {
   display: flex;
   width: 100%;
   flex-direction: row;
   flex-wrap: nowrap;
+  justify-content: right;
 }
 
-#navigationBar-Links {
+#navigationBar-links {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  width: 30%;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  justify-content: space-around;
+}
+
+div.section {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+div#section-image {
+  width: 33%;
+}
+
+div#section-words {
+  width: 66%;
+}
+
+div.footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: right;
+}
+
+div.footer-socialMedia {
+  width: 33%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+div.footer-copywrite {
+  width: 33%;
+  text-align: center;
+  vertical-align: middle;
 }
