--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+  font-family: sans-serif;
+}
+
 div.main {
   width: 80%;
   margin: auto;
@@ -7,6 +11,8 @@ img {
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px black;
 }
 
 div.navigationBar {
@@ -21,7 +27,7 @@ div.navigationBar {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 30%;
+  width: 40%;
 }
 
 ul {
@@ -30,6 +36,17 @@ ul {
   flex-wrap: nowrap;
   width: 100%;
   justify-content: space-around;
+  list-style: none;
+}
+
+h1 {
+  font-size: 5em;
+  font-style: italic;
+}
+
+li {
+  font-size: 2em;
+  color: white;
 }
 
 div.section {
@@ -37,14 +54,53 @@ div.section {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  margin-top: 50px;
 }
 
 div#section-image {
   width: 33%;
 }
 
+div#section-title {
+  width: 100%;
+}
+
+#section-imageFullSize {
+  border-radius: 20px;
+}
+
+#section-image_caption {
+  background-color: rgb(0, 0, 0, 0.6);
+  color: white;
+  text-align: center;
+  position: relative;
+  bottom: 63px;
+  border-radius: 20px;
+  padding: 5px 5px;
+  transform: translateX(50px);
+  width: 392px;
+}
+
 div#section-words {
+  display: flex;
+  flex-wrap: wrap;
   width: 66%;
+}
+
+div#section-quoteSymbol {
+  width: 10%;
+}
+
+div#section-quoteSymbol > p {
+  text-align: right;
+  font-size: 5em;
+  transform: translateY(-75px);
+  padding-right: 15px;
+}
+
+div#section-description {
+  font-size: 1.2em;
+  width: 80%;
 }
 
 div.footer {
@@ -52,9 +108,18 @@ div.footer {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: right;
+  height: 80px;
+  background-color: rgb(12, 158, 139);
+}
+
+div.footer::after {
+  background-color: rgb(12, 158, 139);
 }
 
 div.footer-socialMedia {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 33%;
   text-align: center;
   vertical-align: middle;
@@ -64,4 +129,62 @@ div.footer-copywrite {
   width: 33%;
   text-align: center;
   vertical-align: middle;
+  color: white;
+  text-decoration: underline;
+  font-style: italic;
 }
+
+a.footer-socialMedia_icon {
+  max-width: 50px;
+  height: 50px;
+  background-color: aqua;
+}
+
+a {
+  text-decoration: none;
+  vertical-align: middle;
+  padding-right: 20px;
+}
+
+body {
+  height: 100vh;
+  margin: 0;
+  background: rgb(252, 252, 251);
+}
+
+body:before {
+  z-index: -2;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(12, 158, 139);
+  background: linear-gradient(
+    100deg,
+    rgba(2, 0, 36, 1) 0%,
+    #0ea795 0%,
+    #4d9b74 100%
+  );
+  transform: skew(-75deg);
+  transform-origin: top;
+  border-right: 100px;
+}
+
+/* html {
+  background: rgb(252, 252, 251);
+}
+
+html:before {
+  content: "";
+  position: fixed;
+  top: calc(50% - 1000px);
+  left: 0;
+  width: 100%;
+  height: 800px;
+  background: rgb(12, 158, 139);
+  transform: skew(-15deg);
+  transform-origin: top;
+} */
