--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
 html {
   font-family: sans-serif;
+  min-height: 100%;
+  position: relative;
+  /* +background: rgb(12, 158, 139);
+  background: linear-gradient(
+    100deg,
+    rgba(2, 0, 36, 1) 0%,
+    #0ea795 0%,
+    #4d9b74 100%
+  ); */
 }
 
 div.main {
@@ -27,7 +36,7 @@ div.navigationBar {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 40%;
+  width: 55%;
 }
 
 ul {
@@ -110,11 +119,6 @@ div.footer {
   flex-wrap: nowrap;
   justify-content: right;
   height: 80px;
-  background-color: rgb(12, 158, 139);
-}
-
-div.footer::after {
-  background-color: rgb(12, 158, 139);
 }
 
 div.footer-socialMedia {
@@ -148,12 +152,42 @@ a {
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   margin: 0;
-  background: rgb(252, 252, 251);
 }
 
-body:before {
+#clipShape1 {
+  position: absolute;
+  z-index: -2;
+  width: 100%;
+  height: 100%;
+  background-color: green;
+  background: linear-gradient(
+    100deg,
+    rgba(2, 0, 36, 1) 0%,
+    #0ea795 0%,
+    #4d9b74 100%
+  );
+  clip-path: polygon(0 0, 100% 0, 100% 14%, 0 27%);
+}
+
+#clipShape2 {
+  z-index: -2;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: green;
+  background: linear-gradient(
+    100deg,
+    rgba(2, 0, 36, 1) 0%,
+    #0ea795 0%,
+    #4d9b74 100%
+  );
+  clip-path: polygon(0 90%, 100% 80%, 100% 100%, 0 100%);
+}
+
+/* body:before {
   z-index: -2;
   content: "";
   position: absolute;
@@ -169,10 +203,9 @@ body:before {
     #0ea795 0%,
     #4d9b74 100%
   );
-  transform: skew(-75deg);
   transform-origin: top;
-  border-right: 100px;
-}
+  clip-path: polygon(0 0, 100% 0, 100% 15%, 0 36%);
+} */
 
 /* html {
   background: rgb(252, 252, 251);
